src/test/deca/context/invalid/objet/new-int.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Ligne 9: new ne peut être suivi que d'un objet de type class.
//

{
    int a = new int();
}
